bootstrap/03-argocd-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.yourdomain.org`)
      priority: 10
      middlewares:
        - name: auth-middleware
          namespace: kube-system
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.yourdomain.org`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      middlewares:
      - name: auth-middleware
        namespace: kube-system
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  # tls:
  #   certResolver: default
